fixed header layout issue on bible.com

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -15,8 +15,11 @@ p
 #header
   padding: 0px
   
-#header a
-  margin-left: 20px
+  a#yv_logo
+    margin-left: 20px
+  
+  nav ul
+    margin-right: 10px
 
 #container.no_sidebar
   padding-left: 0px
@@ -32,44 +35,43 @@ p
   background: image-url("laptop.jpg") no-repeat
   height: 535px
 
-#hero #hero_content
-  float: right
-  width: 350px
-  margin-top: 100px
+  #hero_content
+    float: right
+    width: 350px
+    margin-top: 100px
 
-#hero #hero_content
-  h1
-    font-size: 50px
-    font-family: Arial
-    letter-spacing: -0.05em
-    margin-left: -20px
-  p
-    font-size: 18px
-    color: #666
-    line-height: 1.3em
-    margin-bottom: 40px
+    h1
+      font-size: 50px
+      font-family: Arial
+      letter-spacing: -0.05em
+      margin-left: -20px
+    p
+      font-size: 18px
+      color: #666
+      line-height: 1.3em
+      margin-bottom: 40px
 
-.cta
-  background: #91B164
-  display: block
-  color: #fff
-  font-weight: bold
-  font-size: 16px
-  text-align: center
-  text-decoration: none
-  padding: 5px 35px
-  width: 175px
-  margin-left: 20px
-  float: left
-  border-radius: 4px
-  border: 1px #607346 solid
-  box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
-  text-shadow: 0 -1px 0 #657C46
+    .cta
+      background: #91B164
+      display: block
+      color: #fff
+      font-weight: bold
+      font-size: 16px
+      text-align: center
+      text-decoration: none
+      padding: 5px 35px
+      width: 175px
+      margin-left: 20px
+      float: left
+      border-radius: 4px
+      border: 1px #607346 solid
+      box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
+      text-shadow: 0 -1px 0 #657C46
   
-.cta:hover
-  background: #3787d6
-  border-color: #3787d6
-  color: #FFF
+    .cta:hover
+      background: #3787d6
+      border-color: #3787d6
+      color: #FFF
 
 .hero_shadow
   position: relative
